[package]
name = "modbus_tcp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34"
rmodbus_client={ git = "http://programmers.ont.cheaz.ru:3000/ONT.soft/rmodbus_client.git" }
log4rs = "1.3.0"
# rmodbus = { version = "*"}
